# Flights-Agent-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  deps.py  main.py  schemas.py
app/agent/: chain.py  intents.py  policy.py  responders.py  router.py  tools.py
app/db/: models.py
app/routers/: amadeus.py  trips.py
app/services/: amadeus_client.py  trips_service.py
