[project]
name = "flight-ai-backend"
version = "0.1.1"
description = "FastAPI + LangServe starter for flight reservation agent"
requires-python = ">=3.11"
dependencies = [
  # Web stack
  "fastapi==0.111.1",
  "pydantic==2.8.2",
  "pydantic-settings>=2.4.0,<3.0",
  "sse-starlette==2.1.3",
  "uvicorn[standard]>=0.30.0",

  # HTTP / DB / utils
  "httpx==0.27.0",
  "tenacity==8.4.1",
  "sqlmodel==0.0.21",
  "sqlalchemy==2.0.32",
  "psycopg2-binary==2.9.9",
  "redis==5.0.7",
  "orjson==3.10.7",

  # LLM stack (aligned with core >=0.3,<0.4)
  "langchain>=0.3,<0.4",
  "langchain-community>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "langserve>=0.3.1,<0.4",

  # OpenAI SDK
  "openai==1.43.0"
]

[tool.uvicorn]
reload = true
port = 8000
